k8s/environments/review/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pal-tracker
spec:
  rules:
    - host: review.tracker.3.101.85.81.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: pal-tracker
              servicePort: 8080
